# nnfs_r

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/instructions/: repo.instructions.md  rust.instructions.md
.github/workflows/: build and test.yml
nnfs_r/: .editorconfig  Cargo.toml  rustfmt.toml
nnfs_r/.cargo/: config.toml
nnfs_r/examples/: spiral_classification.rs
nnfs_r/src/: lib.rs  main.rs  utils.rs
nnfs_r/src/activations/: mod.rs  relu.rs  softmax.rs
nnfs_r/src/layers/: dense.rs  mod.rs
nnfs_r/src/losses/: categorical_crossentropy.rs  combined.rs  mod.rs
nnfs_r/src/optimizers/: mod.rs  sgd.rs
