[package]
name = "nnfs_r"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["deekshithkp"]
description = "Neural Networks from Scratch in Rust - A learning project based on the NNFS book"
repository = "https://github.com/deekshithkp/nnfs_r"
license = "MIT OR Apache-2.0"
keywords = ["neural-networks", "machine-learning", "deep-learning", "education"]
categories = ["science", "algorithms"]

[lib]
name = "nnfs_r"
path = "src/lib.rs"

[[bin]]
name = "nnfs_r"
path = "src/main.rs"

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"

[dev-dependencies]
# Add test-specific dependencies here as needed
